--- a/app/src/main/res/drawable/radius.xml
+++ b/app/src/main/res/drawable/radius.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/bg_app"/>
-    <corners android:radius="30dp"/>
+    <solid android:color="#4c4E6380"/>
+    <corners android:radius="15dp"/>
 </shape>
