--- a/app/src/main/res/layout/fragment_manage.xml
+++ b/app/src/main/res/layout/fragment_manage.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_app"
@@ -42,7 +43,7 @@
 
 
     <Button
-        android:id="@+id/edit_but"
+        android:id="@+id/Edit"
         android:layout_width="51dp"
         android:layout_height="28dp"
         android:background="@drawable/rounden_button"
@@ -55,10 +56,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/block1"
-        app:layout_constraintVertical_bias="0.713" />
+        app:layout_constraintVertical_bias="0.868" />
 
     <Button
-        android:id="@+id/add"
+        android:id="@+id/Add"
         android:layout_width="23dp"
         android:layout_height="19dp"
         android:layout_marginTop="148dp"
