--- a/app/src/main/res/layout/fragment_manage.xml
+++ b/app/src/main/res/layout/fragment_manage.xml
@@ -23,9 +23,9 @@
             android:id="@+id/master_block"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
-            android:layout_marginEnd="50dp"
+            android:layout_marginEnd="30dp"
             android:gravity="top|center_vertical"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +74,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/block"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="40dp"
                 android:background="@drawable/radius"
                 android:gravity="bottom|center_vertical"
@@ -92,14 +92,24 @@
 
                 <LinearLayout
                     android:id="@+id/contact_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_width="0dp"
+                    android:layout_height="400dp"
                     android:layout_margin="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:background="?android:selectableItemBackground"
                     android:orientation="vertical"
                     app:layout_constraintBottom_toTopOf="@+id/Add"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView2"></LinearLayout>
+                    app:layout_constraintTop_toBottomOf="@+id/imageView2">
+
+                    <ListView
+                        android:id="@+id/userListView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                </LinearLayout>
 
                 <Button
                     android:id="@+id/Add"
