update : mange page

--- a/app/src/main/res/layout/fragment_manage.xml
+++ b/app/src/main/res/layout/fragment_manage.xml
@@ -93,10 +93,11 @@
                 <LinearLayout
                     android:id="@+id/contact_list"
                     android:layout_width="0dp"
-                    android:layout_height="400dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="10dp"
                     android:background="?android:selectableItemBackground"
                     android:orientation="vertical"
                     app:layout_constraintBottom_toTopOf="@+id/Add"
@@ -107,14 +108,17 @@
                     <ListView
                         android:id="@+id/userListView"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="wrap_content">
+
+                    </ListView>
 
                 </LinearLayout>
 
                 <Button
                     android:id="@+id/Add"
-                    android:layout_width="22dp"
-                    android:layout_height="22dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/add"
                     android:gravity="bottom|center_vertical"
@@ -122,7 +126,8 @@
                     android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/contact_list" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
