--- a/app/src/main/res/layout/user_customview.xml
+++ b/app/src/main/res/layout/user_customview.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="right|left"
         android:layout_margin="5dp"
         android:gravity="center"
         android:orientation="horizontal"
@@ -45,6 +46,14 @@
                 android:layout_marginTop="5dp"
                 android:text="08885545"
                 android:textSize="16sp" />
+
         </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/btn_delete"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="30dp"
+            app:srcCompat="@drawable/delete" />
     </LinearLayout>
 </LinearLayout>
